--- a/.github/workflows/huft-lite.yml
+++ b/.github/workflows/huft-lite.yml
@@ -14,7 +14,7 @@ on:
 jobs: 
 
   AutoCIS:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
 
@@ -29,11 +29,9 @@ jobs:
           pip install playwright
 
       - name: Ensure browsers are installed
-        run: |
-          python -m playwright install
-          playwright install-deps
+        run: python -m playwright install
 
       - name: Run python script
         env:
             INFO: ${{ secrets.INFO }}
-        run: python3 hfut_lite.py 
+        run: python hfut_lite.py 
